data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_5.wast
;; 6. **Test for Maximum Bound Index Edge Case**:    - A `br_table` with an index equal to the number of targets provided (edge case just out of valid range).    - *Constraint*: Checks handling just beyond the valid range.    - *Relation*: Tests the edge case behavior of label indexing and the proper error handling at the boundary.

(assert_invalid
  (module
    (func
      (block $blk
        (br_table 0 0 $blk)
      )
    )
  )
  "invalid br_table"
)